Add index.html and js script

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OOP - pierwsza klasa</title>
+    <title>OOP - this, self</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     
-    <div id="output"></div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
